<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="@dimen/signature_padding"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<TextView
        android:textSize="15sp"
        android:textColor="@color/gray"
        android:text="@string/user_signature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
	
	<ImageButton
	    android:id="@+id/user_sign"
	    android:padding="12dp"
	    android:scaleType="fitCenter"
	    android:background="@drawable/item_input_a"
	    android:layout_width="match_parent"
        android:layout_height="200dp"/>
	
	<TextView
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/gray"
        android:text="@string/manager_signature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
	
	<ImageButton
	    android:id="@+id/manager_sign"
	    android:padding="12dp"
	    android:scaleType="fitCenter"
	    android:background="@drawable/item_input_a"
	    android:layout_width="match_parent"
        android:layout_height="200dp"/>
	
	
	<Button 
	    android:id="@+id/btn_complete"
	    android:text="@string/compele"
	    style="@style/Button"
	    android:layout_marginTop="120dp"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"/>
</LinearLayout>
