<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">


        <TextView
            android:id="@+id/uncheck"
            android:textSize="28sp"
            android:textColor="@color/gray"
            android:text="@string/uncheck"
            android:gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/frame_uncheck"
        android:layout_marginTop="2dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
        <ListView
            android:id="@+id/uncheck_list"
            android:listSelector="@null"
            android:cacheColorHint="@color/transparent"
            android:layout_width="match_parent"
        	android:layout_height="match_parent"/>
        
        <TextView
            android:id="@+id/empty_uncheck"
            android:textSize="24sp"
            android:textColor="@color/gray"
            android:text="@string/no_uncheck_data"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        
    </FrameLayout>
    
    <FrameLayout
        android:id="@+id/frame_checked"
        android:visibility="gone"
        android:layout_marginTop="2dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
        <ListView
            android:id="@+id/checked_list"
            android:listSelector="@null"
            android:cacheColorHint="@color/transparent"
            android:layout_width="match_parent"
        	android:layout_height="match_parent"/>
        
        <TextView
            android:id="@+id/empty_check"
            android:textSize="24sp"
            android:textColor="@color/gray"
            android:text="@string/no_checked_data"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        
    </FrameLayout>
</LinearLayout>
